Add Redux actions and reducers

--- a/.babelrc
+++ b/.babelrc
@@ -2,5 +2,14 @@
 	"presets": [
 		"env",
 		"react"
+	],
+	"plugins": [
+		[
+			"transform-runtime", {
+				"polyfill": false,
+				"regenerator": true
+			}
+		],
+		"transform-object-rest-spread"
 	]
 }
