--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
 		"build": "run-s build:*",
 		"build:webpack": "webpack --mode production",
 		"build:electron": "electron-packager . --out=dist --all --asar --overwrite",
-		"lint": "eslint src",
-		"precommit": "yarn lint",
-		"prepush": "yarn lint"
+		"lint": "eslint src"
 	},
 	"dependencies": {
 		"electron-debug": "^2.0.0",
@@ -26,27 +24,31 @@
 		"redux-thunk": "^2.3.0"
 	},
 	"devDependencies": {
-		"babel-core": "^6.26.3",
-		"babel-loader": "^7.1.5",
-		"babel-plugin-transform-object-rest-spread": "^6.26.0",
-		"babel-plugin-transform-runtime": "^6.23.0",
-		"babel-preset-env": "^1.7.0",
-		"babel-preset-react": "^6.24.1",
+		"@babel/core": "^7.1.2",
+		"@babel/preset-env": "^7.1.0",
+		"@babel/preset-react": "^7.0.0",
+		"babel-loader": "^8.0.4",
 		"css-loader": "^1.0.0",
-		"electron": "^2.0.5",
+		"electron": "^3.0.2",
 		"electron-packager": "^12.1.0",
-		"eslint": "^4.19.1",
+		"eslint": "^5.6.1",
 		"eslint-config-airbnb": "^17.0.0",
 		"eslint-plugin-import": "^2.13.0",
 		"eslint-plugin-jsx-a11y": "^6.1.1",
 		"eslint-plugin-react": "^7.10.0",
 		"html-webpack-plugin": "^3.2.0",
-		"husky": "^0.14.3",
+		"husky": "^1.0.1",
 		"node-sass": "^4.9.2",
 		"npm-run-all": "^4.1.3",
 		"sass-loader": "^7.0.3",
-		"style-loader": "^0.21.0",
+		"style-loader": "^0.23.0",
 		"webpack": "^4.16.1",
 		"webpack-cli": "^3.0.8"
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "yarn lint",
+			"pre-push": "yarn lint"
+		}
 	}
 }
