--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"npm-run-all": "^4.1.3",
 		"sass-loader": "^7.0.3",
 		"style-loader": "^0.23.0",
+		"url-loader": "^1.1.1",
 		"webpack": "^4.16.1",
 		"webpack-cli": "^3.0.8"
 	},
