--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
 		"build": "run-s build:*",
 		"build:webpack": "webpack --mode production",
 		"build:electron": "electron-packager . --out=dist --all --asar --overwrite",
-		"lint": "eslint src"
+		"lint": "run-s lint:*",
+		"lint:css": "stylelint '**/*.scss' --syntax scss",
+		"lint:js": "eslint ."
 	},
 	"dependencies": {
 		"electron-debug": "^2.0.0",
@@ -43,6 +45,8 @@
 		"npm-run-all": "^4.1.3",
 		"sass-loader": "^7.0.3",
 		"style-loader": "^0.23.0",
+		"stylelint": "^9.6.0",
+		"stylelint-config-primer": "^2.2.10",
 		"url-loader": "^1.1.1",
 		"webpack": "^4.16.1",
 		"webpack-cli": "^3.0.8"
