--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"babel-loader": "^8.0.4",
 		"css-loader": "^1.0.0",
 		"electron": "^3.0.2",
+		"electron-devtools-installer": "^2.2.4",
 		"electron-packager": "^12.1.0",
 		"eslint": "^5.6.1",
 		"eslint-config-airbnb": "^17.0.0",
