Highlight days with diary entry, style calendar

--- a/.stylelintrc.yaml
+++ b/.stylelintrc.yaml
@@ -6,3 +6,4 @@ rules:
   max-empty-lines: 2
   plugin/no-unsupported-browser-features: null
   selector-max-type: null
+  selector-max-specificity: null
