--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"moment": "^2.22.2",
 		"prop-types": "^15.6.2",
 		"react": "^16.4.1",
+		"react-autosize-textarea": "^5.0.0",
 		"react-day-picker": "^7.2.4",
 		"react-dom": "^16.4.1",
 		"react-redux": "^5.0.7",
