Disable prefer-default-export ESLint rule

--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -39,5 +39,6 @@ rules:
   react/jsx-one-expression-per-line: 0
 
   # Project-specific rules
+  import/prefer-default-export: 0
   jsx-a11y/no-autofocus: 0
   no-console: 0
