Support macOS dark mode
* Detect and use system theme ("auto" option, hidden on other systems)
* Apply theme to windows and system dialogs

--- a/package.json
+++ b/package.json
@@ -69,7 +69,10 @@
 	},
 	"build": {
 		"appId": "com.samuelmeuli.minidiary",
-		"productName": "Mini Diary"
+		"productName": "Mini Diary",
+		"mac": {
+			"darkModeSupport": true
+		}
 	},
 	"husky": {
 		"hooks": {
