--- a/package.json
+++ b/package.json
@@ -15,14 +15,18 @@
 		"start:webpack-watch": "webpack --mode development --watch",
 		"start:electron": "electron .",
 		"lint": "run-s lint:*",
-		"lint:css": "stylelint '**/*.scss' --syntax scss",
-		"lint:js": "eslint .",
+		"lint:css": "stylelint website/styles.css",
+		"lint:scss": "stylelint '**/*.scss' --syntax scss",
+		"lint:js": "eslint . --ext .html,.js",
 		"pack": "electron-builder --dir",
 		"build": "run-s build:*",
 		"build:clean": "rm -rf bundle dist",
 		"build:webpack": "webpack --mode production",
 		"build:electron": "electron-builder -mwl",
-		"release": "run-s build:clean build:webpack \"build:electron --publish always\""
+		"release": "run-s build:clean build:webpack \"build:electron --publish always\"",
+		"website": "run-s website:*",
+		"website:build": "cp node_modules/minireset.css/minireset.min.css website/",
+		"website:serve": "serve website --listen 3000"
 	},
 	"dependencies": {
 		"elasticlunr": "^0.9.5",
@@ -55,6 +59,7 @@
 		"electron-builder": "^20.38.2",
 		"eslint": "^5.6.1",
 		"eslint-config-airbnb": "^17.0.0",
+		"eslint-plugin-html": "^5.0.0",
 		"eslint-plugin-import": "^2.13.0",
 		"eslint-plugin-jsx-a11y": "^6.1.1",
 		"eslint-plugin-react": "^7.10.0",
@@ -63,6 +68,7 @@
 		"node-sass": "^4.9.2",
 		"npm-run-all": "^4.1.3",
 		"sass-loader": "^7.0.3",
+		"serve": "^10.1.1",
 		"style-loader": "^0.23.0",
 		"stylelint": "^9.6.0",
 		"stylelint-config-primer": "^3.0.1",
