--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 	"dependencies": {
 		"elasticlunr": "^0.9.5",
 		"electron-debug": "^2.0.0",
+		"electron-is": "^3.0.0",
 		"electron-settings": "^3.2.0",
 		"electron-updater": "^4.0.6",
 		"feather-icons": "^4.9.0",
