Exclude unnecessary Electron languages

--- a/package.json
+++ b/package.json
@@ -89,7 +89,8 @@
 				"zip"
 			],
 			"category": "public.app-category.lifestyle",
-			"darkModeSupport": true
+			"darkModeSupport": true,
+			"electronLanguages": ["en"]
 		},
 		"linux": {
 			"category": "Office"
