--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
 		"start:webpack": "webpack --mode development",
 		"start:webpack-watch": "webpack --mode development --watch",
 		"start:electron": "electron .",
-		"lint": "run-s lint:*",
-		"lint:css": "stylelint website/styles/styles.css",
-		"lint:scss": "stylelint '**/*.scss' --syntax scss",
-		"lint:js": "eslint . --ext .html,.js",
+		"format:any": "prettier --ignore-path .gitignore --print-width 100 --write",
+		"format:js": "prettier --ignore-path .gitignore --print-width 100 --single-quote --write",
+		"lint:css": "stylelint",
+		"lint:scss": "stylelint --syntax scss",
+		"lint:js": "eslint --ext .html,.js",
 		"pack": "electron-builder --dir",
 		"build": "run-s build:*",
 		"build:clean": "rm -rf bundle dist",
@@ -62,14 +63,17 @@
 		"electron-builder": "^20.38.2",
 		"eslint": "^5.6.1",
 		"eslint-config-airbnb": "^17.0.0",
+		"eslint-config-prettier": "^4.0.0",
 		"eslint-plugin-html": "^5.0.0",
 		"eslint-plugin-import": "^2.13.0",
 		"eslint-plugin-jsx-a11y": "^6.1.1",
 		"eslint-plugin-react": "^7.10.0",
 		"html-webpack-plugin": "^3.2.0",
 		"husky": "^1.0.1",
+		"lint-staged": "^8.1.0",
 		"node-sass": "^4.9.2",
 		"npm-run-all": "^4.1.3",
+		"prettier": "^1.16.1",
 		"sass-loader": "^7.0.3",
 		"serve": "^10.1.1",
 		"style-loader": "^0.23.0",
@@ -90,7 +94,9 @@
 			],
 			"category": "public.app-category.lifestyle",
 			"darkModeSupport": true,
-			"electronLanguages": ["en"]
+			"electronLanguages": [
+				"en"
+			]
 		},
 		"linux": {
 			"category": "Office"
@@ -98,8 +104,28 @@
 	},
 	"husky": {
 		"hooks": {
-			"pre-commit": "yarn lint",
-			"pre-push": "yarn lint"
+			"pre-commit": "lint-staged"
 		}
+	},
+	"lint-staged": {
+		"*.{html,js}": [
+			"yarn format:js",
+			"yarn lint:js",
+			"git add"
+		],
+		"*.css": [
+			"yarn format:any",
+			"yarn lint:css",
+			"git add"
+		],
+		"*.scss": [
+			"yarn format:any",
+			"yarn lint:scss",
+			"git add"
+		],
+		"*.{json,md,yml}": [
+			"yarn format:any",
+			"git add"
+		]
 	}
 }
