Improve PDF export
* Export using electron-md-to-pdf
* Style using github-markdown-css

--- a/package.json
+++ b/package.json
@@ -34,13 +34,13 @@
 		"elasticlunr": "^0.9.5",
 		"electron-debug": "^2.0.0",
 		"electron-is": "^3.0.0",
+		"electron-md-to-pdf": "^1.0.1",
 		"electron-settings": "^3.2.0",
 		"electron-updater": "^4.0.6",
 		"feather-icons": "^4.9.0",
 		"lodash.debounce": "^4.0.8",
 		"minireset.css": "^0.0.4",
 		"moment": "^2.22.2",
-		"pdfmake": "^0.1.40",
 		"prop-types": "^15.6.2",
 		"react": "^16.4.1",
 		"react-autosize-textarea": "^6.0.0",
