--- a/.stylelintrc.yml
+++ b/.stylelintrc.yml
@@ -1,9 +1,9 @@
 extends: stylelint-config-primer
 rules:
-  color-hex-case: upper
   color-hex-length: long
   indentation: tab
   max-empty-lines: 2
   plugin/no-unsupported-browser-features: null
   selector-max-type: null
   selector-max-specificity: null
+  selector-no-qualifying-type: null
