--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
 		"format:js": "prettier --print-width 100 --single-quote --write",
 		"lint:css": "stylelint --fix",
 		"lint:scss": "stylelint --fix --syntax scss",
-		"lint:js": "eslint --ext .html,.js",
+		"lint:js": "eslint --ext .html,.js --fix",
 		"pack": "electron-builder --dir",
 		"build": "run-s build:*",
 		"build:clean": "rm -rf bundle dist",
 		"build:webpack": "webpack --mode production",
-		"build:electron": "electron-builder -mwl",
+		"build:electron": "electron-builder --mac --windows --linux",
 		"release": "run-s build:clean build:webpack \"build:electron --publish always\"",
 		"website": "run-s website:*",
 		"website:build": "cp node_modules/minireset.css/minireset.min.css website/styles/",
@@ -37,15 +37,15 @@
 		"electron-md-to-pdf": "^1.0.1",
 		"electron-settings": "^3.2.0",
 		"electron-updater": "^4.0.6",
-		"feather-icons": "^4.9.0",
+		"feather-icons": "^4.17.0",
 		"lodash.debounce": "^4.0.8",
 		"minireset.css": "^0.0.4",
 		"moment": "^2.22.2",
 		"prop-types": "^15.6.2",
-		"react": "^16.4.1",
+		"react": "^16.8.1",
 		"react-autosize-textarea": "^6.0.0",
 		"react-day-picker": "https://github.com/samuelmeuli/react-day-picker",
-		"react-dom": "^16.4.1",
+		"react-dom": "^16.8.1",
 		"react-redux": "^6.0.0",
 		"react-simple-svg": "^1.0.2",
 		"redux": "^4.0.0",
@@ -57,33 +57,33 @@
 		"@babel/preset-env": "^7.1.0",
 		"@babel/preset-react": "^7.0.0",
 		"@samuelmeuli/eslint-config": "~1.0.0",
-		"@samuelmeuli/stylelint-config": "1.0.0",
+		"@samuelmeuli/stylelint-config": "~1.0.0",
 		"babel-loader": "^8.0.4",
 		"copy-webpack-plugin": "^4.6.0",
 		"css-loader": "^2.0.0",
-		"electron": "^4.0.1",
+		"electron": "^4.0.4",
 		"electron-builder": "^20.38.2",
 		"eslint": "^5.6.1",
 		"eslint-config-airbnb": "^17.0.0",
 		"eslint-config-prettier": "^4.0.0",
-		"eslint-plugin-html": "^5.0.0",
+		"eslint-plugin-html": "^5.0.3",
 		"eslint-plugin-import": "^2.13.0",
-		"eslint-plugin-jsx-a11y": "^6.1.1",
+		"eslint-plugin-jsx-a11y": "^6.2.1",
 		"eslint-plugin-react": "^7.10.0",
 		"html-webpack-plugin": "^3.2.0",
 		"husky": "^1.0.1",
-		"lint-staged": "^8.1.0",
+		"lint-staged": "^8.1.3",
 		"node-sass": "^4.9.2",
 		"npm-run-all": "^4.1.3",
-		"prettier": "^1.16.1",
+		"prettier": "^1.16.4",
 		"sass-loader": "^7.0.3",
-		"serve": "^10.1.1",
+		"serve": "^10.1.2",
 		"style-loader": "^0.23.0",
 		"stylelint": "^9.6.0",
 		"svg-inline-loader": "^0.8.0",
 		"url-loader": "^1.1.1",
-		"webpack": "^4.16.1",
-		"webpack-cli": "^3.0.8"
+		"webpack": "^4.29.3",
+		"webpack-cli": "^3.2.3"
 	},
 	"build": {
 		"appId": "com.samuelmeuli.minidiary",
