--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"@types/redux-logger": "^3.0.7",
 		"draft-js": "^0.10.5",
 		"elasticlunr": "^0.9.5",
+		"electron-context-menu": "^0.11.0",
 		"electron-debug": "^2.0.0",
 		"electron-is": "^3.0.0",
 		"electron-md-to-pdf": "^1.0.1",
