--- a/package.json
+++ b/package.json
@@ -11,63 +11,54 @@
 	"private": true,
 	"scripts": {
 		"postinstall": "electron-builder install-app-deps",
-		"start": "npm-run-all start:webpack --parallel start:webpack-watch start:electron",
-		"start:webpack": "webpack --mode development",
-		"start:webpack-watch": "webpack --mode development --watch",
-		"start:electron": "electron .",
+		"start": "npm-run-all --parallel start:main start:renderer --sequential start:app",
+		"start:main": "webpack --config webpack.main.config.js --mode development",
+		"start:main-watch": "yarn start:main --watch",
+		"start:renderer": "webpack --config webpack.renderer.config.js --mode development",
+		"start:renderer-watch": "yarn start:renderer --watch",
+		"start:app": "electron .",
+		"build": "npm-run-all build:clean --parallel build:main build:renderer --sequential build:app",
+		"build:clean": "rm -rf bundle dist",
+		"build:main": "webpack --config webpack.main.config.js --mode production",
+		"build:renderer": "webpack --config webpack.renderer.config.js --mode production",
+		"build:app": "electron-builder --mac --windows --linux",
+		"pack": "electron-builder --dir",
+		"release": "npm-run-all build:clean --parallel build:main build:renderer --sequential 'build:app --publish always'",
+		"website": "run-s website:*",
+		"website:build": "cp node_modules/minireset.css/minireset.min.css website/styles/",
+		"website:serve": "serve website --listen 3000",
 		"format": "prettier --write",
 		"lint:css": "stylelint --fix",
 		"lint:scss": "stylelint --fix --syntax scss",
 		"lint:js": "eslint --ext .html,.js --fix",
-		"lint:ts": "eslint --ext .ts",
-		"pack": "electron-builder --dir",
-		"build": "run-s build:*",
-		"build:clean": "rm -rf bundle dist",
-		"build:webpack": "webpack --mode production",
-		"build:electron": "electron-builder --mac --windows --linux",
-		"release": "run-s build:clean build:webpack \"build:electron --publish always\"",
-		"website": "run-s website:*",
-		"website:build": "cp node_modules/minireset.css/minireset.min.css website/styles/",
-		"website:serve": "serve website --listen 3000"
+		"lint:ts": "eslint --ext .ts"
 	},
 	"dependencies": {
+		"@types/semver": "^5.5.0",
+		"electron-context-menu": "^0.11.0",
+		"electron-debug": "^2.0.0",
+		"electron-is": "^3.0.0",
+		"electron-updater": "^4.0.6"
+	},
+	"devDependencies": {
+		"@samuelmeuli/eslint-config": "~2.0.0",
+		"@samuelmeuli/stylelint-config": "~1.0.0",
 		"@types/draft-js": "^0.10.29",
 		"@types/lodash.debounce": "^4.0.6",
 		"@types/react": "^16.8.8",
 		"@types/react-dom": "^16.8.2",
 		"@types/react-redux": "^7.0.3",
 		"@types/redux-logger": "^3.0.7",
-		"draft-js": "^0.10.5",
-		"elasticlunr": "^0.9.5",
-		"electron-context-menu": "^0.11.0",
-		"electron-debug": "^2.0.0",
-		"electron-is": "^3.0.0",
-		"electron-md-to-pdf": "^1.0.1",
-		"electron-settings": "^3.2.0",
-		"electron-updater": "^4.0.6",
-		"feather-icons": "^4.19.0",
-		"lodash.debounce": "^4.0.8",
-		"minireset.css": "^0.0.4",
-		"moment": "^2.22.2",
-		"react": "^16.8.4",
-		"react-day-picker": "https://github.com/samuelmeuli/react-day-picker",
-		"react-dom": "^16.8.4",
-		"react-redux": "^6.0.1",
-		"react-simple-svg": "^1.0.2",
-		"redux": "^4.0.0",
-		"redux-logger": "^3.0.6",
-		"redux-thunk": "^2.3.0"
-	},
-	"devDependencies": {
-		"@samuelmeuli/eslint-config": "~2.0.0",
-		"@samuelmeuli/stylelint-config": "~1.0.0",
 		"@typescript-eslint/eslint-plugin": "^1.4.2",
 		"@typescript-eslint/parser": "^1.4.2",
 		"awesome-typescript-loader": "^5.2.1",
-		"copy-webpack-plugin": "^5.0.1",
 		"css-loader": "^2.1.1",
+		"draft-js": "^0.10.5",
+		"elasticlunr": "^0.9.5",
 		"electron": "^4.1.0",
 		"electron-builder": "^20.39.0",
+		"electron-md-to-pdf": "^1.0.1",
+		"electron-settings": "^3.2.0",
 		"eslint": "^5.15.2",
 		"eslint-config-airbnb": "^17.0.0",
 		"eslint-config-prettier": "^4.1.0",
@@ -75,12 +66,24 @@
 		"eslint-plugin-import": "^2.13.0",
 		"eslint-plugin-jsx-a11y": "^6.2.1",
 		"eslint-plugin-react": "^7.10.0",
+		"feather-icons": "^4.19.0",
 		"html-webpack-plugin": "^3.2.0",
 		"husky": "^1.0.1",
 		"lint-staged": "^8.1.5",
+		"lodash.debounce": "^4.0.8",
+		"minireset.css": "^0.0.4",
+		"moment": "^2.22.2",
 		"node-sass": "^4.9.2",
 		"npm-run-all": "^4.1.3",
 		"prettier": "^1.16.4",
+		"react": "^16.8.4",
+		"react-day-picker": "https://github.com/samuelmeuli/react-day-picker",
+		"react-dom": "^16.8.4",
+		"react-redux": "^6.0.1",
+		"react-simple-svg": "^1.0.2",
+		"redux": "^4.0.0",
+		"redux-logger": "^3.0.6",
+		"redux-thunk": "^2.3.0",
 		"sass-loader": "^7.0.3",
 		"serve": "^10.1.2",
 		"source-map-loader": "^0.2.4",
@@ -89,7 +92,8 @@
 		"svg-inline-loader": "^0.8.0",
 		"typescript": "^3.3.3333",
 		"webpack": "^4.29.6",
-		"webpack-cli": "^3.3.0"
+		"webpack-cli": "^3.3.0",
+		"webpack-node-externals": "^1.7.2"
 	},
 	"build": {
 		"appId": "com.samuelmeuli.minidiary",
@@ -136,13 +140,13 @@
 		}
 	},
 	"lint-staged": {
-		"*.{html,js}": [
-			"yarn lint:js",
+		"*.ts": [
+			"yarn lint:ts",
 			"yarn format",
 			"git add"
 		],
-		"*.ts": [
-			"yarn lint:ts",
+		"*.{html,js}": [
+			"yarn lint:js",
 			"yarn format",
 			"git add"
 		],
