Bundle dependencies and exclude node_modules from build

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -17,8 +17,11 @@ settings:
     - electron
 
 rules:
-  # The usage check for devDependencies is disabled because dependencies of the renderer process
-  # are declared as devDependencies so they are not bundled in the final app by electron-builder
-  "import/no-extraneous-dependencies": off
+  import/no-extraneous-dependencies:
+    - error
+    - devDependencies:
+        - "webpack.*.config.js"
 
-  "import/named": off # TODO Currently seems to be broken for TypeScript (false positives)
+  # TODO Remove rule exceptions once fixed
+  "@typescript-eslint/no-var-requires": off # Seems to be broken (also marks normal imports)
+  "import/named": off # Seems to be broken for TypeScript (incorrect "not found" errors)
