--- a/package.json
+++ b/package.json
@@ -34,50 +34,27 @@
 		"lint:ts": "eslint --ext .ts"
 	},
 	"dependencies": {
-		"@types/semver": "^5.5.0",
-		"electron-context-menu": "^0.11.0",
-		"electron-debug": "^2.0.0",
-		"electron-is": "^3.0.0",
-		"electron-updater": "^4.0.6"
-	},
-	"devDependencies": {
-		"@samuelmeuli/eslint-config": "~2.0.0",
-		"@samuelmeuli/stylelint-config": "~1.0.0",
 		"@types/draft-js": "^0.10.29",
 		"@types/electron-settings": "^3.1.1",
 		"@types/lodash.debounce": "^4.0.6",
 		"@types/react": "^16.8.8",
-		"@types/react-dom": "^16.8.2",
+		"@types/react-dom": "^16.8.3",
 		"@types/react-redux": "^7.0.3",
 		"@types/redux-logger": "^3.0.7",
-		"@typescript-eslint/eslint-plugin": "^1.4.2",
-		"@typescript-eslint/parser": "^1.4.2",
-		"awesome-typescript-loader": "^5.2.1",
-		"css-loader": "^2.1.1",
+		"@types/semver": "^5.5.0",
 		"draft-js": "^0.10.5",
 		"elasticlunr": "^0.9.5",
-		"electron": "^4.1.0",
-		"electron-builder": "^20.39.0",
+		"electron-context-menu": "^0.11.0",
+		"electron-debug": "^2.0.0",
+		"electron-is": "^3.0.0",
 		"electron-md-to-pdf": "^1.0.1",
 		"electron-settings": "^3.2.0",
-		"eslint": "^5.15.2",
-		"eslint-config-airbnb": "^17.0.0",
-		"eslint-config-prettier": "^4.1.0",
-		"eslint-plugin-html": "^5.0.3",
-		"eslint-plugin-import": "^2.13.0",
-		"eslint-plugin-jsx-a11y": "^6.2.1",
-		"eslint-plugin-react": "^7.10.0",
+		"electron-updater": "^4.0.6",
 		"feather-icons": "^4.19.0",
-		"html-webpack-plugin": "^3.2.0",
-		"husky": "^1.0.1",
-		"lint-staged": "^8.1.5",
 		"lodash.debounce": "^4.0.8",
 		"markdown-draft-js": "^1.4.1",
 		"minireset.css": "^0.0.4",
 		"moment": "^2.22.2",
-		"node-sass": "^4.9.2",
-		"npm-run-all": "^4.1.3",
-		"prettier": "^1.16.4",
 		"react": "^16.8.4",
 		"react-day-picker": "https://github.com/samuelmeuli/react-day-picker",
 		"react-dom": "^16.8.4",
@@ -85,7 +62,30 @@
 		"react-simple-svg": "^1.0.2",
 		"redux": "^4.0.0",
 		"redux-logger": "^3.0.6",
-		"redux-thunk": "^2.3.0",
+		"redux-thunk": "^2.3.0"
+	},
+	"devDependencies": {
+		"@samuelmeuli/eslint-config": "~2.0.0",
+		"@samuelmeuli/stylelint-config": "~1.0.0",
+		"@typescript-eslint/eslint-plugin": "^1.5.0",
+		"@typescript-eslint/parser": "^1.5.0",
+		"awesome-typescript-loader": "^5.2.1",
+		"css-loader": "^2.1.1",
+		"electron": "^4.1.1",
+		"electron-builder": "^20.39.0",
+		"eslint": "^5.15.2",
+		"eslint-config-airbnb": "^17.0.0",
+		"eslint-config-prettier": "^4.1.0",
+		"eslint-plugin-html": "^5.0.3",
+		"eslint-plugin-import": "^2.13.0",
+		"eslint-plugin-jsx-a11y": "^6.2.1",
+		"eslint-plugin-react": "^7.10.0",
+		"html-webpack-plugin": "^3.2.0",
+		"husky": "^1.0.1",
+		"lint-staged": "^8.1.5",
+		"node-sass": "^4.9.2",
+		"npm-run-all": "^4.1.3",
+		"prettier": "^1.16.4",
 		"sass-loader": "^7.0.3",
 		"serve": "^10.1.2",
 		"source-map-loader": "^0.2.4",
@@ -94,11 +94,14 @@
 		"svg-inline-loader": "^0.8.0",
 		"typescript": "^3.3.3333",
 		"webpack": "^4.29.6",
-		"webpack-cli": "^3.3.0",
-		"webpack-node-externals": "^1.7.2"
+		"webpack-cli": "^3.3.0"
 	},
 	"build": {
 		"appId": "com.samuelmeuli.minidiary",
+		"files": [
+			"!**/*",
+			"bundle/**/*"
+		],
 		"mac": {
 			"target": [
 				"dmg",
