Improve Webpack config
* Do not generate license files in development
* Do not generate source maps in production

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -20,7 +20,7 @@ rules:
   import/no-extraneous-dependencies:
     - error
     - devDependencies:
-        - "webpack.*.config.js"
+        - "webpack.*.js"
 
   # TODO Remove rule exceptions once fixed
   "@typescript-eslint/no-var-requires": off # Seems to be broken (also marks normal imports)
