--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
 	"scripts": {
 		"postinstall": "electron-builder install-app-deps",
 		"start": "npm-run-all --parallel start:main start:renderer --parallel start:app start:main-watch start:renderer-watch",
-		"start:main": "webpack --config webpack.main.config.js --mode development",
+		"start:main": "webpack --config webpack.main.js --mode development",
 		"start:main-watch": "yarn start:main --watch",
-		"start:renderer": "webpack --config webpack.renderer.config.js --mode development",
+		"start:renderer": "webpack --config webpack.renderer.js --mode development",
 		"start:renderer-watch": "yarn start:renderer --watch",
 		"start:app": "electron .",
 		"build": "npm-run-all build:clean --parallel build:main build:renderer --sequential build:app",
 		"build:clean": "rm -rf bundle dist",
-		"build:main": "webpack --config webpack.main.config.js --mode production",
-		"build:renderer": "webpack --config webpack.renderer.config.js --mode production",
+		"build:main": "webpack --config webpack.main.js --mode production",
+		"build:renderer": "webpack --config webpack.renderer.js --mode production",
 		"build:app": "electron-builder --mac --windows --linux",
 		"pack": "electron-builder --dir",
 		"release": "npm-run-all build:clean --parallel build:main build:renderer --sequential 'build:app --publish always'",
