--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
 		"@types/redux-logger": "^3.0.7",
 		"@types/semver": "^5.5.0",
 		"draft-js": "^0.10.5",
+		"draft-js-autolist-plugin": "^2.0.0",
+		"draft-js-plugins-editor": "^2.1.1",
 		"elasticlunr": "^0.9.5",
 		"electron-context-menu": "^0.11.0",
 		"electron-debug": "^2.0.0",
