--- a/src/tsconfig-base.json
+++ b/src/tsconfig-base.json
@@ -3,16 +3,14 @@
 		"allowSyntheticDefaultImports": true,
 		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
+		"noEmit": true,
 		"noFallthroughCasesInSwitch": true,
 		"noImplicitAny": true,
 		"noImplicitReturns": true,
 		"noImplicitThis": true,
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
-		"removeComments": true,
-		"sourceMap": true,
 		"strictBindCallApply": true,
-		"strictFunctionTypes": true,
-		"target": "es5"
+		"strictFunctionTypes": true
 	}
 }
