--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
 		"staged": "lint-staged",
 		"typecheck": "run-p typecheck:*",
 		"typecheck:main": "tsc --project src/main",
-		"typecheck:renderer": "tsc --project src/renderer"
+		"typecheck:renderer": "tsc --project src/renderer",
+		"test": "cross-env TZ=GMT jest"
 	},
 	"dependencies": {
 		"@types/draft-js": "^0.10.29",
@@ -84,6 +85,7 @@
 		"@typescript-eslint/eslint-plugin": "^1.5.0",
 		"@typescript-eslint/parser": "^1.5.0",
 		"babel-loader": "^8.0.6",
+		"cross-env": "^5.2.0",
 		"css-loader": "^2.1.1",
 		"electron": "^5.0.1",
 		"electron-builder": "^20.39.0",
@@ -95,7 +97,9 @@
 		"eslint-plugin-react": "^7.10.0",
 		"html-webpack-plugin": "^3.2.0",
 		"husky": "^2.2.0",
+		"jest": "^24.8.0",
 		"lint-staged": "^8.1.5",
+		"mockdate": "^2.0.2",
 		"node-sass": "^4.9.2",
 		"npm-run-all": "^4.1.3",
 		"prettier": "^1.16.4",
