Exit with 1 on ESLint warnings

--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
 		"format": "prettier --write",
 		"lint:css": "stylelint --fix",
 		"lint:scss": "stylelint --fix --syntax scss",
-		"lint:js": "eslint --ext .js,.jsx --fix",
-		"lint:ts": "eslint --ext .ts,.tsx --fix",
+		"lint:js": "eslint --ext .js,.jsx --fix --max-warnings 0",
+		"lint:ts": "eslint --ext .ts,.tsx --fix --max-warnings 0",
 		"staged": "lint-staged",
 		"typecheck": "run-p typecheck:*",
 		"typecheck:main": "tsc --project src/main",
