Disallow Stylelint warnings

--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
 		"website:build": "cp node_modules/minireset.css/minireset.min.css website/styles/",
 		"website:serve": "serve website --listen 3000",
 		"format": "prettier --write",
-		"lint:css": "stylelint --fix",
-		"lint:scss": "stylelint --fix --syntax scss",
+		"lint:css": "stylelint --fix --max-warnings 0",
+		"lint:scss": "stylelint --fix --max-warnings 0 --syntax scss",
 		"lint:js": "eslint --ext .js,.jsx --fix --max-warnings 0",
 		"lint:ts": "eslint --ext .ts,.tsx --fix --max-warnings 0",
 		"staged": "lint-staged",
