--- a/package.json
+++ b/package.json
@@ -108,7 +108,8 @@
 		"svg-inline-loader": "^0.8.0",
 		"typescript": "^3.3.3333",
 		"webpack": "^4.32.0",
-		"webpack-cli": "^3.3.0"
+		"webpack-cli": "^3.3.0",
+		"webpack-merge": "^4.2.1"
 	},
 	"babel": {
 		"presets": [
